objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>District Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigeration Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used to help data migration from SAP</inlineHelpText>
        <label>Ext ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBA_Team__c</fullName>
        <label>SBA Team</label>
        <picklist>
            <picklistValues>
                <fullName>No auto. Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_F&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_F&amp;B, other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_HVAC_FKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_HVAC, Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_HVAC, Refrigeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Industry, Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Industry, Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Industry, Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Partner_HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Partner_Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE_Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SBA_Team__c</columns>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>